--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-01.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-01.html
@@ -9,23 +9,19 @@
         color: orange;
       }
 
-      .lista {
+      p, ul {
         background-color: grey;
-      }
-
-      p {
-
       }
 
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p class='lista'>Qual é a sua cor favorita?</p>
-    <ul class='lista'>
-      <li id='amarelo'>Amarelo</li>
-      <li id='vermelho'>Vermelho</li>
-      <li id='marrom'>Marrom</li>
+    <p>Qual é a sua cor favorita?</p>
+    <ul>
+      <li>Amarelo</li>
+      <li>Vermelho</li>
+      <li>Marrom</li>
     </ul>
   </body>
 </html>
