--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-01.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/exercicio-01.html
@@ -3,18 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-      h1 {
-        font-size: 65px;
-        color: orange;
-        font-family: sans-serif;
-      }
-
-      p, ul {
-        background-color: grey;
-      }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
