--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index.html
@@ -2,17 +2,21 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>Posicionamento de elementos</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Agrupando Seletores</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Exercícios de fixação 3.3</h1>
-    <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
-    <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
-    <img src="https://bit.ly/3AVnjks" alt="bowser" class="bowser" />
-    <p class="speach">
-      Goomba, do something!
-    </p>
-    <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
+    <h1>olsta dos Melhores Sites que já vi</h1>
+    <ul>
+      <ol>TecnoBlog</ol>
+      <ol>SpeedTest</ol>
+    </ul>
+    <p>Top 3 dos melhores sites que existem na web</p>
+    <ul>
+      <ol>YouTube</ol>
+      <ol>Twitch</ol>
+    </ul>
+    <p>Principais motivos para eu gostar deles</p>
+    <p>Sites com “designer” discreto e com proposito inovador.</p>
   </body>
 </html>
